[package]
name = "futures-timer"
version = "2.0.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/async-rs/futures-timer"
homepage = "https://github.com/async-rs/futures-timer"
documentation = "https://docs.rs/futures-timer"
description = """
Timeouts for futures.
"""

[dependencies]

[target.wasm32-unknown-unknown.dependencies]
wasm-timer = "0.2.4"
wasm-bindgen = "0.2.55"
futures = "0.3.1"
web-sys = "0.3.32"

[dev-dependencies]
async-std = { version = "1.0.1", features = ["attributes"] }
futures = "0.3.1"
