[package]
name = "futures-timer"
version = "2.0.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/async-rs/futures-timer"
homepage = "https://github.com/async-rs/futures-timer"
documentation = "https://docs.rs/futures-timer"
description = """
Timeouts for futures.
"""

[dependencies]
wasm-timer = { version = "0.2.4", optional = true }
wasm-bindgen-crate = { package = "wasm-bindgen", version = "0.2.55", optional = true }
futures = { version = "0.3.1", optional = true }
web-sys = { version = "0.3.32", optional = true }

[dev-dependencies]
async-std = { version = "1.0.1", features = ["attributes"] }
futures = "0.3.1"

[features]
wasm-bindgen = [
	"wasm-timer",
	"wasm-bindgen-crate",
	"futures",
	"web-sys"
]
